[package]
name        = "sql_lexer"
version     = "0.8.1"
authors     = ["Thijs Cadier <thijs@appsignal.com>"]
description = "Library to lex and sanitize SQL"
readme      = "README.md"
repository  = "https://github.com/appsignal/sql_lexer"
keywords    = ["sql", "lexer", "sanitizer"]
license     = "MIT/Apache-2.0"
